fuel-indexer/derive/test_data/fail_self.stderr
error: 'self' in function signature not allowed here
 --> test_data/fail_self.rs:4:1
  |
4 | #[handler]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `handler` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> test_data/fail_self.rs:1:1
   |
1  | / #![no_std]
2  | | use fuel_indexer_derive::handler;
3  | |
4  | | #[handler]
...  |
9  | |     t1.save();
10 | | }
   | |_^ consider adding a `main` function to `$DIR/test_data/fail_self.rs`
